fix: change progress bar z-index to mask level

--- a/src/components/header/style/header.scss
+++ b/src/components/header/style/header.scss
@@ -2,7 +2,7 @@ $header_height: 5rem;
 $sider_width: 24rem;
 
 .progress_bar {
-	z-index: $z_sider + 1;
+	z-index: $z_mask + 1;
 
 	&.hide {
 		display: none;
